classDiagram
  class User {
    - UUID id
    - string first_name
    - string last_name
    - string email
    - string password
    - bool is_admin
    - datetime created_at
    - datetime updated_at
    + register()
    + update_profile()
    + delete()
  }

  class Place {
    - UUID id
    - string title
    - string description
    - float price
    - float latitude
    - float longitude
    - datetime created_at
    - datetime updated_at
    + create()
    + update()
    + delete()
    + list()
  }

  class Review {
    - UUID id
    - int rating
    - string comment
    - datetime created_at
    - datetime updated_at
    + create()
    + update()
    + delete()
    + list()
  }

  class Amenity {
    - UUID id
    - string name
    - string description
    - datetime created_at
    - datetime updated_at
    + create()
    + update()
    + delete()
    + list()
  }

  User "1" --> "0..*" Place : owns
  User "1" --> "0..*" Review : writes
  Place "1" --> "0..*" Review : has
  Place "1..*" -- "0..*" Amenity : has
